Updates on Deployment and UM cases (celery tasks not yet integrated to dashboard)
Phex deployment date
Training grade saving issue on a certain stages
Training stage not displayed on Dashboard
Phex checkbox should not be required to be checked
GET issue after confirmation of Pre_Deployment_Items
 PHEX scheduling add capability to manually schedule
	Remove automatic phex scheduling after deployment scheduling
	Add notification of how many dogs are needed to be scheduled for phex
Missing MIA list (Unconfirmed Arrival)
Appearing "K9s Deployed" message in login
Fix Team Name str for Team Assignments
Modaled Family Tree
Confirm if Failing Grade includes 0
Daily Refresher invalid input
Daily Refresher time input
TL and Operation add request not working
Dapat pantay yung notif sa recommened sched ng phex scheduling
Restriction (recommended sched) na 1 week before lang dapat ang phex sched or capability mag resched
Emergency leave list for 3 or more days lapsed (deprecated)
Automatic MIA if more than 3 days (No more emergency leave list)
Wrong count on dashboard for unpartnered k9s
Unclassifed K9s walang laman even tho may k9s na walang skill
Units na hindi pa dumadaan sa training, included sa unpartnered list
Admin dashboard issue for insufficent items and item replenish
Team Leader Add event did not go to commander pending
Ability to reschedule other phex
	Issue with not knowing when deployment date is (include deployment dates?)
Admin dashboard count for how many k9s in predeployment scheduling fix (confirm after populate db)
	Don't include count if di pa pwede ideploy (otherwise, idaan na lang sa notif)
MIA List button to change status
	Team_Dog_Deployed on status change
	Update Port Info on return
	Return unit to port regardless of its current location on MIA
Maritime input
MIA list in dashboard
Confirm if phex needs "Cleared" checkbox
Unconfirmed arrival changed name to MIA list
Pwede magbalik si admin ng unit from MIA list back to Port (initial dep)
Notify si admin i

--- a/profiles/templates/profiles/operations_dashboard.html
+++ b/profiles/templates/profiles/operations_dashboard.html
@@ -69,6 +69,12 @@
                                     </div>
                                     <div class="fields">
                                         <div class="ten wide field">
+                                                <label>Remarks</label>
+                                                {{form.remarks}}
+                                            </div>
+                                    </div>
+                                    <div class="fields">
+                                        <div class="ten wide field">
                                                 <label>Address</label>
                                                 {{form.location}}
                                             </div>
