--- a/planningandacquiring/templates/planningandacquiring/budgeting.html
+++ b/planningandacquiring/templates/planningandacquiring/budgeting.html
@@ -41,16 +41,22 @@
                         <thead>
                             <tr>
                                 <th>Breed</th>
-                                <th>Deceased (count)</th>
+                                <th class="six wide">Deceased (count)</th>
                             </tr>
                         </thead>
                         <tbody>
-                            {% for a,b in dead_list%}
-                            <tr>
-                                <td>{{a}}</td>
-                                <td>{{b}}</td>
-                            </tr>
-                            {% endfor %}
+                            {% if dead_list%}
+                                {% for a,b in dead_list%}
+                                <tr>
+                                    <td>{{a}}</td>
+                                    <td>{{b}}</td>
+                                </tr>
+                                {% endfor %}
+                            {%else%}
+                                <tr>
+                                    <td colspan="2" class="center aligned">No K9 Predicted to Die Next Year</td>
+                                </tr>
+                            {%endif%}
                         </tbody>
                     </table>
                 </div>
