--- a/profiles/templates/profiles/global-base-ui/global_base_ui.html
+++ b/profiles/templates/profiles/global-base-ui/global_base_ui.html
@@ -14,6 +14,7 @@
     <script src="{% static 'DataTables/datatables.js' %}"></script>
     <script src="{% static 'js/jquery.formset.js' %}"></script>
     <script src="{% static 'Chart.js-2.8.0/dist/Chart.bundle.min.js' %}"></script>
+    <script src="js/accordion.js"></script>
 
     <script src="{% static 'fullcalendar-4.1.0/packages/core/main.js' %}"></script>
     <script src="{% static 'fullcalendar-4.1.0/packages/daygrid/main.js' %}"></script>
