--- a/planningandacquiring/templates/planningandacquiring/physical_count_med_report.html
+++ b/planningandacquiring/templates/planningandacquiring/physical_count_med_report.html
@@ -27,7 +27,7 @@
         <tbody>
             {% for data in data%}
             <tr class="right aligned">
-                <td class="left aligned">{{data.date_counted}}</td>
+                <td class="left aligned">{{data.date_counted|date:'Y-m-d'}}</td>
                 <td class="left aligned">{{data.inventory}}</td>
                 <td class="left aligned">{{data.inventory.medicine.uom}}</td>
                 <td>{{data.old_quantity|intcomma}}</td>
