location incident populate

--- a/planningandacquiring/templates/planningandacquiring/training_report.html
+++ b/planningandacquiring/templates/planningandacquiring/training_report.html
@@ -31,9 +31,9 @@
                 <td class="left aligned">{{data.0}}</td>
                 <td class="left aligned">{{data.1}}</td>
                 <td class="left aligned">{{data.2}}</td>
-                <td>{{data.3|intcomma}}</td>
-                <td>{{data.4|intcomma}}</td>
-                <td style="font-weight: bold;">{{data.5|intcomma}}</td>
+                <td class="two wide">{{data.3|intcomma}}</td>
+                <td class="two wide">{{data.4|intcomma}}</td>
+                <td class="two wide" style="font-weight: bold;">{{data.5|intcomma}}</td>
             </tr>
             {%endfor%}
         </tbody>
