--- a/planningandacquiring/templates/planningandacquiring/on_leave_report.html
+++ b/planningandacquiring/templates/planningandacquiring/on_leave_report.html
@@ -25,7 +25,7 @@
         <tbody>
             {% for data in data%}
             <tr class="right aligned">
-                <td class="left aligned">{{data.0}}</td>
+                <td class="left aligned">{{data.0.fullname}}</td>
                 <td class="left aligned">{{data.0.rank}}</td>
                 <td>{{data.1|intcomma}}</td>
                 <td>{{data.2|intcomma}}</td>
