--- a/planningandacquiring/templates/planningandacquiring/fou_accomplishment_report.html
+++ b/planningandacquiring/templates/planningandacquiring/fou_accomplishment_report.html
@@ -27,9 +27,9 @@
         </thead>
         <tbody>
             {% for data in data%}
-            <tr>
-                <td>{{data.0}}</td>
-                <td>{{data.rank}}</td>
+            <tr class="right aligned">
+                <td class="left aligned">{{data.0.fullname}}</td>
+                <td class="left aligned">{{data.0.rank}}</td>
                 <td>{{data.1|intcomma}}</td>
                 <td>{{data.2|intcomma}}</td>
                 <td>{{data.3|intcomma}}</td>
