--- a/profiles/templates/profiles/vet_dashboard.html
+++ b/profiles/templates/profiles/vet_dashboard.html
@@ -52,7 +52,7 @@
                             <div class="seven wide column">
                                 <div class="ui raised center aligned segment">
                                         <div class="ui two column grid">
-                                            <div class="six wide column">
+                                            <div class="eight wide column">
                                                     <div class="ui statistic">
                                                             <div class="value">
                                                                 <i class="syringe purple icon">{{yearly_count}}</i>
@@ -64,10 +64,10 @@
                                                             </div>
                                                         </div>
                                             </div>
-                                            <div class="ten wide column left aligned">
+                                            <div class="eight wide column left aligned">
                                                     <div class="ui grid">
                                                         {% for a,b in yearly_list%}
-                                                        <div class="eight wide column" style="padding:0px;">
+                                                        <div class="sixteen wide column" style="padding:0px;">
                                                             <strong>{{a}} - </strong>
                                                             <span style="color:orangered;">{{b}}</span>
                                                         </div>
