--- a/training/templates/training/classify_k9_list.html
+++ b/training/templates/training/classify_k9_list.html
@@ -82,7 +82,7 @@
         <tbody>
             {% for data_unclassified in data_unclassified %}
             <tr>
-                <td>{{data_unclassified.name}}</td>
+                <td>{{data_unclassified}}</td>
                 <td class="three wide">{{data_unclassified.age}} years and {{data_unclassified.month_remainder}} months</td>
                 <td class="two wide">{{data_unclassified.age_days}}</td>
                 <td style="text-align:center;" class="two wide">
