--- a/unitmanagement/templates/unitmanagement/replenishment_request_confirm.html
+++ b/unitmanagement/templates/unitmanagement/replenishment_request_confirm.html
@@ -20,24 +20,24 @@
         <table id="tabledata1" class="ui  column celled table">
             <thead>
                 <tr>
-                    <th class="ui two wide">Date Requested</th>
-                    <th class="ui three wide">Team Leader</th>
+                    <th class="three wide">Date Requested</th>
+                    <th class="three wide">Team Leader</th>
                     <th>Port</th>
-                    <th class="ui two wide"></th>
+                    <th class="two wide"></th>
                 </tr>
             </thead>
             <tbody>
                 {% for data in data1 %}
                 <tr>
-                    <td>
+                    <td class="two wide">
                         <a href="{% url 'unitmanagement:replenishment_approval' data.0.id %}" > 
                             {{data.0.date_requested | date:'Y-m-d'}}</a>
                             
                     </td>
-                    <td>{{data.0.handler}}</td>
+                    <td class="three wide">{{data.0.handler}}</td>
                     <td>{{data.1}}</td>
-                    <td class="center aligned">
-                        <a href="#" class="ui orange button">Send Items</a>
+                    <td class="center aligned three wide">
+                        <a href="#" class="ui orange button send_btn" id='{{data.0.id}}'>Send Items</a>
                     </td>
                 </tr>
                 
@@ -49,23 +49,23 @@
         <table id="tabledata2" class="ui column celled table">
             <thead>
                 <tr>
-                    <th class="ui three wide">Date Approved</th>
-                    <th class="ui three wide">Team Leader</th>
+                    <th class="three wide">Date Approved</th>
+                    <th class="three wide">Team Leader</th>
                     <th>Port</th>
-                    <th class="ui three wide">Approved by</th>
+                    <th class="three wide">Approved by</th>
                 </tr>
             </thead>
             <tbody>
                 {% for data in data2 %}
                 <tr>
-                    <td>
+                    <td class="two wide">
                         <a href="{% url 'unitmanagement:replenishment_approval' data.0.id %}">
                             {{data.0.date_approved | date:'Y-m-d'}}        
                         </a>
                     </td>
-                    <td>{{data.0.handler}}</td>
+                    <td class="three wide">{{data.0.handler}}</td>
                     <td>{{data.1}}</td>
-                    <td>{{data.0.approved_by}}</td>
+                    <td class="three wide">{{data.0.approved_by}}</td>
                 </tr>
                 
                 {% endfor %}
@@ -73,26 +73,35 @@
         </table>
     </div>
 
-    <div class="ui modal">
-            <div class="header"></div>
-            <div class="content">
-                <h1></h1>
-            </div>
-    </div>
+   <div class="ui large modal" id = 'id_data'></div>
 
 <script type="text/javascript">
         
-    $(document).ready(function() {
-        $('#tabledata1').DataTable({
-            "order": [[ 0, "asc" ]]
+  
+    $('#tabledata1').DataTable({
+        "order": [[ 0, "desc" ]]
+    });
+
+    $('#tabledata2').DataTable({
+        "order": [[ 0, "desc" ]]
+    });
+
+    $('.menu .item').tab();
+
+   $( ".send_btn" ).bind('click', function() {
+        var url = 'replenishment_confirm/ajax_load_replenishment';  
+        var id = $(this).attr('id')
+        $('.ui.large.modal').modal('show');
+        $.ajax({                         
+            url: url,                  
+            data: {
+            'id': id       
+            },
+            success: function (data) {  
+                $("#id_data").html(data);
+            }
         });
-
-        $('#tabledata2').DataTable({
-            "order": [[ 0, "asc" ]]
-        });
-
-        $('.menu .item').tab();
-
+        
     });
     
 </script>
