--- a/planningandacquiring/templates/planningandacquiring/k9_breeding_report.html
+++ b/planningandacquiring/templates/planningandacquiring/k9_breeding_report.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% block content %} 
-
+{% load humanize %}
 {% if data1 %}
 
 <div class="ui segment" id="printableArea">
@@ -31,8 +31,8 @@
             {% for data in data1 %}
             <tr class="right aligned">
                 <td class="left aligned">{{data.0}}</td>
-                <td>{{data.1}}</td>
-                <td>{{data.2}}</td>
+                <td>{{data.1|intcomma}}</td>
+                <td>{{data.2|intcomma}}</td>
             </tr>
             {%endfor%}
         </tbody>
@@ -52,13 +52,13 @@
         <tbody>
             {% for data in data%}
             <tr>
-                <td>{{data.date}}</td>
+                <td>{{data.date|date:'Y-m-d'}}</td>
                 <td>{{data.mother}}</td>
                 <td>{{data.father}}</td>
                 <td>{{data.mother.breed}}</td>
-                <td>{{data.alive}}</td>
-                <td>{{data.litter_died}}</td>
-                <td>{{data.litter_no}}</td>
+                <td class="right aligned">{{data.alive|intcomma}}</td>
+                <td class="right aligned">{{data.litter_died|intcomma}}</td>
+                <td class="right aligned">{{data.litter_no|intcomma}}</td>
             </tr>
             {%endfor%}
         </tbody>
